@@ -3,6 +3,10 @@
 	adjust the mousetrap keybindings. Set a timer of one second to
 	properly block edge-actions after mousetrapping
 
+	* lisp/sawfish/gtk/image.jl: due two fixes in rep-gtk it's possible
+	now to set the filename in GtkFileChooserButton, so the GtkEntry is
+	removed
+
 2011-05-31  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/ext/mousetrap.jl: added mousetrapping feature,
 	original module by Fernando Carmona Varo, modified by me
